tests/lsp/workspace/snapshots/lsp__workspace__symbol__filter_type_figure.snap
---
source: tests/lsp/workspace/symbol.rs
expression: "find_symbols(FIXTURE, \"figure\")"
---
[
  {
    "name": "Figure 1: Bar",
    "kind": 6,
    "deprecated": false,
    "location": {
      "uri": "file:///main.tex",
      "range": {
        "start": {
          "line": 15,
          "character": 0
        },
        "end": {
          "line": 19,
          "character": 12
        }
      }
    }
  }
]
