tests/lsp/workspace/snapshots/lsp__workspace__symbol__filter_type_item.snap
---
source: tests/lsp/workspace/symbol.rs
expression: "find_symbols(FIXTURE, \"item\")"
---
[
  {
    "name": "1",
    "kind": 22,
    "deprecated": false,
    "location": {
      "uri": "file:///main.tex",
      "range": {
        "start": {
          "line": 24,
          "character": 4
        },
        "end": {
          "line": 24,
          "character": 28
        }
      }
    }
  },
  {
    "name": "2",
    "kind": 22,
    "deprecated": false,
    "location": {
      "uri": "file:///main.tex",
      "range": {
        "start": {
          "line": 25,
          "character": 4
        },
        "end": {
          "line": 25,
          "character": 28
        }
      }
    }
  },
  {
    "name": "3",
    "kind": 22,
    "deprecated": false,
    "location": {
      "uri": "file:///main.tex",
      "range": {
        "start": {
          "line": 26,
          "character": 4
        },
        "end": {
          "line": 26,
          "character": 28
        }
      }
    }
  }
]
