tests/lsp/workspace/snapshots/lsp__workspace__symbol__filter_type_math.snap
---
source: tests/lsp/workspace/symbol.rs
expression: "find_symbols(FIXTURE, \"math\")"
---
[
  {
    "name": "Equation (1)",
    "kind": 14,
    "deprecated": false,
    "location": {
      "uri": "file:///main.tex",
      "range": {
        "start": {
          "line": 9,
          "character": 0
        },
        "end": {
          "line": 11,
          "character": 14
        }
      }
    }
  },
  {
    "name": "Lemma 1 (Qux)",
    "kind": 13,
    "deprecated": false,
    "location": {
      "uri": "file:///main.tex",
      "range": {
        "start": {
          "line": 33,
          "character": 0
        },
        "end": {
          "line": 35,
          "character": 11
        }
      }
    }
  }
]
